@@ -1,3 +1,7 @@
 Walter Brisken <wbrisken@nrao.edu>
 Adam Deller <adeller@nrao.edu>
 Chris Phillis <Chris.Phillips@csiro.au>
+Jan Wagner <jwagner@kasi.re.kr>
+Richard Dodson <richard.dodson@icrar.org>
+Alessandra Bertarini <abertari@mpifr-bonn.mpg.de>
+Helge Rottmann <rottmann@mpifr-bonn.mpg.de>
